@@ -74,14 +74,14 @@ public class DetachedEdge extends DetachedElement<Edge> implements Edge {
 
     public DetachedEdge(final Object id, final String label,
                         final Map<String, Object> properties,
-                        final Pair<Object, String> outV,
-                        final Pair<Object, String> inV) {
+                        final Object outVId, final String outVLabel,
+                        final Object inVId, final String inVLabel) {
         super(id, label);
-        this.outVertex = new DetachedVertex(outV.getValue0(), outV.getValue1(), Collections.emptyMap());
-        this.inVertex = new DetachedVertex(inV.getValue0(), inV.getValue1(), Collections.emptyMap());
+        this.outVertex = new DetachedVertex(outVId, outVLabel, Collections.emptyMap());
+        this.inVertex = new DetachedVertex(inVId, inVLabel, Collections.emptyMap());
         if (properties != null && !properties.isEmpty()) {
             this.properties = new HashMap<>();
-            properties.entrySet().stream().forEach(entry -> {
+            properties.entrySet().iterator().forEachRemaining(entry -> {
                 if (Property.class.isAssignableFrom(entry.getValue().getClass())) {
                     this.properties.put(entry.getKey(), Collections.singletonList((Property)entry.getValue()));
                 } else {
@@ -90,6 +90,30 @@ public class DetachedEdge extends DetachedElement<Edge> implements Edge {
             });
         }
     }
+
+    /**
+     * @deprecated As for release 3.2.5, replaced by {@link #DetachedEdge(Object, String, Map, Object, String, Object, String)}.
+     */
+    @Deprecated
+    public DetachedEdge(final Object id, final String label,
+                        final Map<String, Object> properties,
+                        final Pair<Object, String> outV,
+                        final Pair<Object, String> inV) {
+        super(id, label);
+        this.outVertex = new DetachedVertex(outV.getValue0(), outV.getValue1(), Collections.emptyMap());
+        this.inVertex = new DetachedVertex(inV.getValue0(), inV.getValue1(), Collections.emptyMap());
+        if (properties != null && !properties.isEmpty()) {
+            this.properties = new HashMap<>();
+            properties.entrySet().iterator().forEachRemaining(entry -> {
+                if (Property.class.isAssignableFrom(entry.getValue().getClass())) {
+                    this.properties.put(entry.getKey(), Collections.singletonList((Property)entry.getValue()));
+                } else {
+                    this.properties.put(entry.getKey(), Collections.singletonList(new DetachedProperty<>(entry.getKey(), entry.getValue(), this)));
+                }
+            });
+        }
+    }
+
     @Override
     public String toString() {
         return StringFactory.edgeString(this);
